# 2d-engine

./: CMakeLists.txt  README.md  TODO.md
src/: Main.cpp
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
src/Engine/Configs/: Settings.h
src/Engine/Entities/: Drawable.cpp  Drawable.h  GameObject.cpp  GameObject.h  Sprite.cpp  Sprite.h
src/Engine/Inc/Engine/: Core.h  Entities.h
src/Engine/Scenes/: ISceneManager.h  Scene.cpp  Scene.h  SceneManager.h
src/Engine/Src/: Engine.cpp  Engine.h
src/Engine/Src/Configs/: Settings.h
src/Engine/Src/Entities/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  ColliderManager.cpp  ColliderManager.h  Drawable.cpp  Drawable.h  GameObject.cpp  GameObject.h  ObjectPool.h  RigidBody.cpp  RigidBody.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  Transform.cpp  Transform.h
src/Engine/Src/Entities/Colliders/: BoxCollider.cpp  BoxCollider.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  ColliderManager.cpp  ColliderManager.h
src/Engine/Src/Scenes/: ISceneManager.h  Scene.cpp  Scene.h  SceneManager.h
src/EngineTesting/Colliders/: CMakeLists.txt  Colliders.cpp
src/Game/: Game.cpp  Game.h  Player.cpp  Player.h
src/Games/FlappyBird/: CMakeLists.txt  FlappyBird.cpp
